Bug 168068 - Bold/italic not functioning in 25.8
Summary: Bold/italic not functioning in 25.8
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected, regression
: 168179 (view as bug list)
Depends on:
Blocks: Formatting
  Show dependency treegraph
 
Reported: 2025-08-22 19:45 UTC by BogdanB
Modified: 2025-09-01 07:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
video testing the bug (16.01 MB, video/webm)
2025-08-22 19:46 UTC, BogdanB
Details
video testing the bug (14.16 MB, video/webm)
2025-08-23 18:24 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2025-08-22 19:45:16 UTC
Description:
select some text and make some part italic, make some part bold, mix them a lot. Then press italic/bold for some selections of

Steps to Reproduce:
See description

Actual Results:
not working

Expected Results:
working to bold/unbold italic/unitalic


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1a62a694aa31e754b8cecc6505a9ed32ba96b3c3
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 BogdanB 2025-08-22 19:46:54 UTC
Created attachment 202458 [details]
video testing the bug
Comment 2 BogdanB 2025-08-22 19:47:43 UTC
The same test is ok in
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Jesus Solis 2025-08-22 23:46:15 UTC
Can reproduce. Setting to NEW.

Test case:
1. In Writer, write (or paste) 5 words.
2. Highlight the second and third words. Bold these words.
3. Highlight the third and fourth words. Italicize these words.
4. Highlight the second, third, and fourth words. Bold these words. Attempt to unbold them, and it doesn't work.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bfe32ea304fe9571764caceea9c86e190684720a
CPU threads: 12; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL threaded
Comment 4 Takenori Yasuda 2025-08-23 01:54:40 UTC
Reproduced it based on Comment 3.

Version: 25.8.1.0.0+ (X86_64) / LibreOffice Community
Build ID: a067cfd788121ad4042cf09acf62505caf38b66c
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo

Additional info:
After step 4 in Comment 3, I saved and reloaded the file, and it worked.
Comment 5 BogdanB 2025-08-23 05:55:35 UTC
I tried to bibisect in 26.2, but all versions were bad.
Comment 6 Ming Hua 2025-08-23 05:58:18 UTC
Using the steps in comment #3, I can reproduce in as early as 25.8 Beta1:

Version: 25.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 1b25e37a63c5a6f16bdcb365ed3da80ac419e6e4
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: CL threaded

Hope this helps with bisecting.
Comment 7 BogdanB 2025-08-23 06:00:55 UTC
repro in
Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 8 BogdanB 2025-08-23 06:36:16 UTC
Bibisected to

author	Noel Grandin <noelgrandin@gmail.com>	2025-04-07 20:14:46 +0200
committer	Noel Grandin <noelgrandin@gmail.com>	2025-04-08 18:11:06 +0200
commit 6e16e1812292236ed61b637371f70459cf993b7f (patch)
tree d0a9b0b8cf75434916c1da0e406d38e057d16202
parent 98ca580e910d23bb7933fa39e6907900f9a4b651 (diff)
tdf#64991 exit some loops early
Change-Id: Ic3b5a8a2df5a484150edb95fcacf8960b53a6ead
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183855
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>

Noel, can you take a look?
Comment 9 Commit Notification 2025-08-23 17:07:43 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/864bd25ae13c07037a818f51889cd7c578af850f

tdf#168068 Bold/italic not functioning

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 BogdanB 2025-08-23 18:19:32 UTC
Working well in
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 864bd25ae13c07037a818f51889cd7c578af850f
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Thanks, Noel.
Comment 11 BogdanB 2025-08-23 18:21:54 UTC
Noel, somehow in testing I made again the same thing. Harder but I can make it not to work still in this version.
Comment 12 BogdanB 2025-08-23 18:24:11 UTC
Created attachment 202477 [details]
video testing the bug

Testing the bug after being fixed. Harder to reproduce, but still here....
Comment 13 Commit Notification 2025-08-23 20:42:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cc09d5db6ed126037bfb476d24d2866c308c62d9

tdf#168068 Bold/italic not functioning (2)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 BogdanB 2025-08-24 04:30:21 UTC
Now it's really working well. Could be backported.
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 155f2ec1b390152ecc6c3fa6e9cd1ba5e6c04c78
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 15 Commit Notification 2025-08-24 19:11:25 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b38c44ee5a08bd4d3ea2e69a3a01fca63880e221

tdf#168068 Bold/italic not functioning

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2025-08-24 20:04:43 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/87adf182c7d66d9c18ca3d6e94f4c8592ad77301

tdf#168068 Bold/italic not functioning (2)

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2025-08-25 13:55:47 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c3b63fd92aef1e1f99932c0d6c9ff120cd0e614c

tdf#168068: sw_uiwriter5: Add test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 BogdanB 2025-08-29 15:53:46 UTC
*** Bug 168179 has been marked as a duplicate of this bug. ***