tdf#168068 Bold/italic not functioning

regression from
    commit 6e16e1812292236ed61b637371f70459cf993b7f
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Mon Apr 7 20:14:46 2025 +0200
    tdf#64991 exit some loops early

Change-Id: I9167708bb8e6d3477b711f0ce773b0f9594e91c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190102
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>